<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5sp"
    android:orientation="vertical"
    android:paddingLeft="20sp"
    android:paddingRight="20sp"
    android:paddingBottom="5sp"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/product_name_txt"
        android:textSize="16sp"
       android:fontFamily="@font/lato"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c0c0c0"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/quantityUD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag_quantity"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/quantity_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/priceUD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/quantityUD"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:text="@string/tag_price"
            android:textColor="@color/black"
            android:textSize="14sp"

            />


        <TextView
            android:id="@+id/price_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/quantity_txt"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            />


        <TextView
            android:id="@+id/totalvatUD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag_total_vat"
            android:layout_below="@id/priceUD"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            />


        <TextView
            android:id="@+id/total_vat_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/price_txt"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            />


        <TextView
            android:id="@+id/mionameUD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag_total_amount"
            android:layout_below="@id/totalvatUD"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/total_amt_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/total_vat_txt"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            />

    </RelativeLayout>


</LinearLayout>